// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SplitLogo > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)]"
    style="--c-w: 10px; --c-h: 10px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[4px] overflow-hidden absolute top-[0px] left-[0px]"
      data-testid="input-currency-logo-container"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)] relative [pointer-events:auto]"
        data-testid="token-logo"
        style="--c-w: 10px; --c-h: 10px;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="10"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
            style="object-fit: cover; width: 10px; height: 10px; border-radius: 10px; z-index: 1;"
            width="10"
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[4px] overflow-hidden absolute top-[0px] right-[0px]"
      data-testid="output-currency-logo-container"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)] relative [pointer-events:auto]"
        data-testid="token-logo"
        style="--c-w: 10px; --c-h: 10px;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="10"
            src="https://token-icons.s3.amazonaws.com/eth.png"
            style="object-fit: cover; width: 10px; height: 10px; border-radius: 10px; z-index: 1;"
            width="10"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-42161"
        style="--c-z: 10; width: 7.2px; height: 7.2px; border-radius: 2.16px; border-width: 1.6px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 4.999999999999999px; height: 4.999999999999999px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="mock-asset-ARBITRUM_LOGO.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SplitLogo > stacked orientation > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row w-[var(--c-w)] h-[var(--c-h)] relative"
    style="--c-w: 17px; --c-h: 10px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 m-[var(--c-m)] border-surface1 border-[2px] rounded-[999999px] z-[var(--c-z)]"
      data-testid="input-currency-logo-container"
      style="--c-m: -2px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)] relative [pointer-events:auto]"
        data-testid="token-logo"
        style="--c-w: 10px; --c-h: 10px;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="10"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
            style="object-fit: cover; width: 10px; height: 10px; border-radius: 10px; z-index: 1;"
            width="10"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 ml-[var(--c-ml)] z-[var(--c-z)]"
      data-testid="output-currency-logo-container"
      style="--c-ml: -3px; --c-z: 1;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)] relative [pointer-events:auto]"
        data-testid="token-logo"
        style="--c-w: 10px; --c-h: 10px;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="10"
            src="https://token-icons.s3.amazonaws.com/eth.png"
            style="object-fit: cover; width: 10px; height: 10px; border-radius: 10px; z-index: 1;"
            width="10"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-42161"
        style="--c-z: 10; width: 7.2px; height: 7.2px; border-radius: 2.16px; border-width: 1.6px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 4.999999999999999px; height: 4.999999999999999px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="mock-asset-ARBITRUM_LOGO.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
